--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   shared_preferences: ^2.0.15
+  firebase_core: ^1.18.0
+  firebase_auth: ^3.3.20
+  google_sign_in: ^5.3.3
 
 dev_dependencies:
   flutter_test:
